Fix - XP & Green points system & profile icon

--- a/.gitignore
+++ b/.gitignore
@@ -10,6 +10,12 @@ DIALOG-MIGRATION-COMPLETE.md
 DIALOG-USAGE.md
 PROTOTYPE-README.md
 REORGANIZATION-SUMMARY.md
+XP-VS-GREEN-POINTS.md
+DASHBOARD-LEVEL-FIX.md
+LEVELING-SYSTEM.md
+MOBILE-IMPROVEMENTS.md
+POINTS-QUICK-REFERENCE.md
+PROFILE-ENHANCEMENTS.md
 
 # Node
 /node_modules
