--- a/.gitignore
+++ b/.gitignore
@@ -16,6 +16,7 @@ LEVELING-SYSTEM.md
 MOBILE-IMPROVEMENTS.md
 POINTS-QUICK-REFERENCE.md
 PROFILE-ENHANCEMENTS.md
+SPLASH-MOBILE-FIX.md
 
 # Node
 /node_modules
