Updated UI & splash screen Go green button

--- a/.gitignore
+++ b/.gitignore
@@ -17,6 +17,8 @@ MOBILE-IMPROVEMENTS.md
 POINTS-QUICK-REFERENCE.md
 PROFILE-ENHANCEMENTS.md
 SPLASH-MOBILE-FIX.md
+DESIGN-MIGRATION-PLAN.md
+DESIGN-SYSTEM.md
 
 # Node
 /node_modules
