--- a/package.json
+++ b/package.json
@@ -1,10 +1,12 @@
 {
-  "name": "just-go-green",
+  "name": "time-for-green",
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
     "build": "ng build",
+    "build:prod": "ng build --configuration production",
+    "vercel-build": "ng build --configuration production",
     "watch": "ng build --watch --configuration development",
     "test": "ng test"
   },
