Updated to config from environment files

--- a/vercel.json
+++ b/vercel.json
@@ -11,11 +11,12 @@
   ],
   "routes": [
     {
+      "src": "/assets/(.*)",
+      "dest": "/assets/$1"
+    },
+    {
       "src": "/(.*)",
       "dest": "/index.html"
     }
-  ],
-  "env": {
-    "apiKey": "@news-api-key"
-  }
+  ]
 }
