--- a/vercel.json
+++ b/vercel.json
@@ -5,7 +5,7 @@
       "src": "package.json",
       "use": "@vercel/static-build",
       "config": {
-        "distDir": "dist/timeforgreenv1/browser"
+        "distDir": "dist/timeforgreenv1"
       }
     }
   ],
